parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declara_vars program_fun mainF
Rule 2     program_fun -> funs
Rule 3     funs -> function_t funs
Rule 4     funs -> function_v funs
Rule 5     funs -> empty
Rule 6     mainF -> mainFI declara_vars mainF1 RCURBRA
Rule 7     mainFI -> mainF_sign LCURBRA
Rule 8     mainF_sign -> MAINF
Rule 9     mainF1 -> stmt_v mainF1
Rule 10    mainF1 -> empty
Rule 11    declara_vars -> vars declara_vars
Rule 12    declara_vars -> empty
Rule 13    vars -> type ID dimensionada equals exp SEMICOLON
Rule 14    vars -> type ID dimensionada SEMICOLON
Rule 15    dimensionada -> LBRACK CTE_INT RBRACK
Rule 16    dimensionada -> LBRACK CTE_INT RBRACK LBRACK CTE_INT RBRACK
Rule 17    dimensionada -> empty
Rule 18    loop -> while
Rule 19    loop -> for_v2
Rule 20    stmt -> assignment
Rule 21    stmt -> condition
Rule 22    stmt -> print
Rule 23    stmt -> loop
Rule 24    stmt -> read
Rule 25    stmt -> graphstmt
Rule 26    stmt -> funCall SEMICOLON
Rule 27    stmt -> return
Rule 28    stmt_v -> assignment
Rule 29    stmt_v -> condition
Rule 30    stmt_v -> print
Rule 31    stmt_v -> loop
Rule 32    stmt_v -> read
Rule 33    stmt_v -> graphstmt
Rule 34    stmt_v -> funCall SEMICOLON
Rule 35    assignment -> id equals assignment3 SEMICOLON
Rule 36    assignment3 -> exp
Rule 37    assignment3 -> read
Rule 38    vcte -> cte_int
Rule 39    vcte -> cte_float
Rule 40    vcte -> cte_string
Rule 41    vcte -> id
Rule 42    vcte -> funCall
Rule 43    vcte -> vectormatriz
Rule 44    vectormatriz -> LBRACK vm1 RBRACK
Rule 45    vectormatriz -> vm1
Rule 46    vm1 -> LBRACK vm2 RBRACK COMMA vm1
Rule 47    vm1 -> LBRACK vm2 RBRACK
Rule 48    vm2 -> exp COMMA vm2
Rule 49    vm2 -> exp
Rule 50    vm2 -> empty
Rule 51    functionI -> type ID
Rule 52    functionV -> VOID ID
Rule 53    function_t -> FUNCTION functionI function2 inicia_fun declara_vars function4 termina_fun
Rule 54    function_v -> FUNCTION functionV function2 inicia_fun declara_vars function9 termina_fun
Rule 55    inicia_fun -> LCURBRA
Rule 56    termina_fun -> RCURBRA
Rule 57    function2 -> LPARENT function3 RPARENT
Rule 58    function3 -> funParam function5
Rule 59    function3 -> empty
Rule 60    function4 -> stmt function4
Rule 61    function4 -> empty
Rule 62    function9 -> stmt_v function9
Rule 63    function9 -> empty
Rule 64    function5 -> COMMA funParam function5
Rule 65    function5 -> empty
Rule 66    funParam -> type ID
Rule 67    type -> INT
Rule 68    type -> FLOAT
Rule 69    type -> STRING
Rule 70    print -> PRINT LPARENT expression RPARENT SEMICOLON
Rule 71    read -> READ LPARENT id read1 RPARENT SEMICOLON
Rule 72    read1 -> LBRACK exp RBRACK LBRACK exp RBRACK
Rule 73    read1 -> LBRACK exp RBRACK
Rule 74    read1 -> empty
Rule 75    equals -> EQUAL
Rule 76    indice_dimensionada -> LBRACK exp RBRACK LBRACK exp RBRACK
Rule 77    indice_dimensionada -> LBRACK exp RBRACK
Rule 78    indice_dimensionada -> empty
Rule 79    aidi -> ID
Rule 80    id -> aidi indice_dimensionada
Rule 81    funCall -> ID iniciaFunCall funCall2 terminaFunCall
Rule 82    iniciaFunCall -> LPARENT
Rule 83    terminaFunCall -> RPARENT
Rule 84    funCall2 -> funCallParam funCall3
Rule 85    funCall2 -> empty
Rule 86    funCall3 -> COMMA funCallParam funCall3
Rule 87    funCall3 -> empty
Rule 88    funCallParam -> exp
Rule 89    cte_int -> negativo CTE_INT
Rule 90    cte_float -> negativo CTE_FLOAT
Rule 91    cte_string -> CTE_STRING
Rule 92    return -> RETURN return1 SEMICOLON
Rule 93    return1 -> vcte
Rule 94    return1 -> exp
Rule 95    loper -> GREATERT
Rule 96    loper -> MINORT
Rule 97    loper -> GREATEREQT
Rule 98    loper -> MINOREQT
Rule 99    loper -> DIFFERENT
Rule 100   loper -> ISEQUAL
Rule 101   condition -> IF head_cond body condition1
Rule 102   condition1 -> elseif head_cond body condition1
Rule 103   condition1 -> else body
Rule 104   condition1 -> empty
Rule 105   elseif -> ELSEIF
Rule 106   else -> ELSE
Rule 107   head_cond -> LPARENT expression close_condition
Rule 108   body -> LCURBRA body1 RCURBRA
Rule 109   close_condition -> RPARENT
Rule 110   body1 -> stmt body1
Rule 111   body1 -> empty
Rule 112   for_v2 -> nuevo_for forBody
Rule 113   nuevo_for -> FOR LPARENT id COLON for2 RPARENT
Rule 114   for2 -> exp
Rule 115   forBody -> body
Rule 116   while -> while1 body
Rule 117   while1 -> while_w LPARENT expression RPARENT
Rule 118   while_w -> WHILE
Rule 119   dosExp -> LPARENT exp COMMA exp RPARENT
Rule 120   unaExp -> LPARENT exp RPARENT
Rule 121   graphstmt -> graphfig
Rule 122   graphstmt -> graphview
Rule 123   graphstmt -> graphmove
Rule 124   graphfig -> graphfig1 SEMICOLON
Rule 125   graphfig -> graphfig2 SEMICOLON
Rule 126   graphfig1 -> CIRCLE unaExp
Rule 127   graphfig1 -> SQUARE unaExp
Rule 128   graphfig1 -> TRIANGLE unaExp
Rule 129   graphfig2 -> RECTANGLE dosExp
Rule 130   graphmove -> graphmove0 SEMICOLON
Rule 131   graphmove -> graphmove1 SEMICOLON
Rule 132   graphmove0 -> DOWN
Rule 133   graphmove0 -> UP
Rule 134   graphmove1 -> GO unaExp
Rule 135   graphmove1 -> LEFT unaExp
Rule 136   graphmove1 -> RIGHT unaExp
Rule 137   graphmove1 -> BACK unaExp
Rule 138   graphview -> graphview0 SEMICOLON
Rule 139   graphview -> graphview1 SEMICOLON
Rule 140   graphview -> graphview2 SEMICOLON
Rule 141   graphview0 -> EXIT
Rule 142   graphview0 -> START_F
Rule 143   graphview0 -> END_F
Rule 144   graphview1 -> POINTER_COLOR unaExp
Rule 145   graphview1 -> POINTER_SIZE unaExp
Rule 146   graphview1 -> SPEED unaExp
Rule 147   graphview2 -> POSITION dosExp
Rule 148   expression -> exp loper exp
Rule 149   expression -> exp
Rule 150   exp -> term
Rule 151   exp -> term exp_o exp
Rule 152   exp_o -> PLUS
Rule 153   exp_o -> MINUS
Rule 154   openP -> LPARENT
Rule 155   closeP -> RPARENT
Rule 156   term -> factor term_o term
Rule 157   term -> factor
Rule 158   term_o -> MULT
Rule 159   term_o -> DIVIDE
Rule 160   factor -> vcte
Rule 161   factor -> openP expression closeP
Rule 162   negativo -> MINUS
Rule 163   negativo -> empty
Rule 164   empty -> <empty>

Terminals, with rules where they appear

BACK                 : 137
CIRCLE               : 126
COLON                : 113
COMMA                : 46 48 64 86 119
CTE_FLOAT            : 90
CTE_INT              : 15 16 16 89
CTE_STRING           : 91
DIFFERENT            : 99
DIVIDE               : 159
DOWN                 : 132
ELSE                 : 106
ELSEIF               : 105
END_F                : 143
EQUAL                : 75
EXIT                 : 141
FLOAT                : 68
FOR                  : 113
FUNCTION             : 53 54
GO                   : 134
GREATEREQT           : 97
GREATERT             : 95
ID                   : 1 13 14 51 52 66 79 81
IF                   : 101
INT                  : 67
ISEQUAL              : 100
LBRACK               : 15 16 16 44 46 47 72 72 73 76 76 77
LCURBRA              : 7 55 108
LEFT                 : 135
LPARENT              : 57 70 71 82 107 113 117 119 120 154
MAINF                : 8
MINOREQT             : 98
MINORT               : 96
MINUS                : 153 162
MULT                 : 158
PLUS                 : 152
POINTER_COLOR        : 144
POINTER_SIZE         : 145
POSITION             : 147
PRINT                : 70
PROGRAM              : 1
RBRACK               : 15 16 16 44 46 47 72 72 73 76 76 77
RCURBRA              : 6 56 108
READ                 : 71
RECTANGLE            : 129
RETURN               : 92
RIGHT                : 136
RPARENT              : 57 70 71 83 109 113 117 119 120 155
SEMICOLON            : 1 13 14 26 34 35 70 71 92 124 125 130 131 138 139 140
SPEED                : 146
SQUARE               : 127
START_F              : 142
STRING               : 69
TRIANGLE             : 128
UP                   : 133
VOID                 : 52
WHILE                : 118
error                : 

Nonterminals, with rules where they appear

aidi                 : 80
assignment           : 20 28
assignment3          : 35
body                 : 101 102 103 115 116
body1                : 108 110
closeP               : 161
close_condition      : 107
condition            : 21 29
condition1           : 101 102
cte_float            : 39
cte_int              : 38
cte_string           : 40
declara_vars         : 1 6 11 53 54
dimensionada         : 13 14
dosExp               : 129 147
else                 : 103
elseif               : 102
empty                : 5 10 12 17 50 59 61 63 65 74 78 85 87 104 111 163
equals               : 13 35
exp                  : 13 36 48 49 72 72 73 76 76 77 88 94 114 119 119 120 148 148 149 151
exp_o                : 151
expression           : 70 107 117 161
factor               : 156 157
for2                 : 113
forBody              : 112
for_v2               : 19
funCall              : 26 34 42
funCall2             : 81
funCall3             : 84 86
funCallParam         : 84 86
funParam             : 58 64
function2            : 53 54
function3            : 57
function4            : 53 60
function5            : 58 64
function9            : 54 62
functionI            : 53
functionV            : 54
function_t           : 3
function_v           : 4
funs                 : 2 3 4
graphfig             : 121
graphfig1            : 124
graphfig2            : 125
graphmove            : 123
graphmove0           : 130
graphmove1           : 131
graphstmt            : 25 33
graphview            : 122
graphview0           : 138
graphview1           : 139
graphview2           : 140
head_cond            : 101 102
id                   : 35 41 71 113
indice_dimensionada  : 80
iniciaFunCall        : 81
inicia_fun           : 53 54
loop                 : 23 31
loper                : 148
mainF                : 1
mainF1               : 6 9
mainFI               : 6
mainF_sign           : 7
negativo             : 89 90
nuevo_for            : 112
openP                : 161
print                : 22 30
program              : 0
program_fun          : 1
read                 : 24 32 37
read1                : 71
return               : 27
return1              : 92
stmt                 : 60 110
stmt_v               : 9 62
term                 : 150 151 156
term_o               : 156
terminaFunCall       : 81
termina_fun          : 53 54
type                 : 13 14 51 66
unaExp               : 126 127 128 134 135 136 137 144 145 146
vars                 : 11
vcte                 : 93 160
vectormatriz         : 43
vm1                  : 44 45 46
vm2                  : 46 47 48
while                : 18
while1               : 116
while_w              : 117

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declara_vars program_fun mainF

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declara_vars program_fun mainF

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declara_vars program_fun mainF

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declara_vars program_fun mainF
    (11) declara_vars -> . vars declara_vars
    (12) declara_vars -> . empty
    (13) vars -> . type ID dimensionada equals exp SEMICOLON
    (14) vars -> . type ID dimensionada SEMICOLON
    (164) empty -> .
    (67) type -> . INT
    (68) type -> . FLOAT
    (69) type -> . STRING

    FUNCTION        reduce using rule 164 (empty -> .)
    MAINF           reduce using rule 164 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11

    declara_vars                   shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMICOLON declara_vars . program_fun mainF
    (2) program_fun -> . funs
    (3) funs -> . function_t funs
    (4) funs -> . function_v funs
    (5) funs -> . empty
    (53) function_t -> . FUNCTION functionI function2 inicia_fun declara_vars function4 termina_fun
    (54) function_v -> . FUNCTION functionV function2 inicia_fun declara_vars function9 termina_fun
    (164) empty -> .

    FUNCTION        shift and go to state 17
    MAINF           reduce using rule 164 (empty -> .)

    program_fun                    shift and go to state 12
    funs                           shift and go to state 13
    function_t                     shift and go to state 14
    function_v                     shift and go to state 15
    empty                          shift and go to state 16

state 6

    (11) declara_vars -> vars . declara_vars
    (11) declara_vars -> . vars declara_vars
    (12) declara_vars -> . empty
    (13) vars -> . type ID dimensionada equals exp SEMICOLON
    (14) vars -> . type ID dimensionada SEMICOLON
    (164) empty -> .
    (67) type -> . INT
    (68) type -> . FLOAT
    (69) type -> . STRING

    FUNCTION        reduce using rule 164 (empty -> .)
    MAINF           reduce using rule 164 (empty -> .)
    IF              reduce using rule 164 (empty -> .)
    PRINT           reduce using rule 164 (empty -> .)
    READ            reduce using rule 164 (empty -> .)
    ID              reduce using rule 164 (empty -> .)
    FOR             reduce using rule 164 (empty -> .)
    CIRCLE          reduce using rule 164 (empty -> .)
    SQUARE          reduce using rule 164 (empty -> .)
    TRIANGLE        reduce using rule 164 (empty -> .)
    RECTANGLE       reduce using rule 164 (empty -> .)
    EXIT            reduce using rule 164 (empty -> .)
    START_F         reduce using rule 164 (empty -> .)
    END_F           reduce using rule 164 (empty -> .)
    POINTER_COLOR   reduce using rule 164 (empty -> .)
    POINTER_SIZE    reduce using rule 164 (empty -> .)
    SPEED           reduce using rule 164 (empty -> .)
    POSITION        reduce using rule 164 (empty -> .)
    DOWN            reduce using rule 164 (empty -> .)
    UP              reduce using rule 164 (empty -> .)
    GO              reduce using rule 164 (empty -> .)
    LEFT            reduce using rule 164 (empty -> .)
    RIGHT           reduce using rule 164 (empty -> .)
    BACK            reduce using rule 164 (empty -> .)
    WHILE           reduce using rule 164 (empty -> .)
    RCURBRA         reduce using rule 164 (empty -> .)
    RETURN          reduce using rule 164 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11

    vars                           shift and go to state 6
    declara_vars                   shift and go to state 18
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 7

    (12) declara_vars -> empty .

    FUNCTION        reduce using rule 12 (declara_vars -> empty .)
    MAINF           reduce using rule 12 (declara_vars -> empty .)
    IF              reduce using rule 12 (declara_vars -> empty .)
    PRINT           reduce using rule 12 (declara_vars -> empty .)
    READ            reduce using rule 12 (declara_vars -> empty .)
    ID              reduce using rule 12 (declara_vars -> empty .)
    FOR             reduce using rule 12 (declara_vars -> empty .)
    CIRCLE          reduce using rule 12 (declara_vars -> empty .)
    SQUARE          reduce using rule 12 (declara_vars -> empty .)
    TRIANGLE        reduce using rule 12 (declara_vars -> empty .)
    RECTANGLE       reduce using rule 12 (declara_vars -> empty .)
    EXIT            reduce using rule 12 (declara_vars -> empty .)
    START_F         reduce using rule 12 (declara_vars -> empty .)
    END_F           reduce using rule 12 (declara_vars -> empty .)
    POINTER_COLOR   reduce using rule 12 (declara_vars -> empty .)
    POINTER_SIZE    reduce using rule 12 (declara_vars -> empty .)
    SPEED           reduce using rule 12 (declara_vars -> empty .)
    POSITION        reduce using rule 12 (declara_vars -> empty .)
    DOWN            reduce using rule 12 (declara_vars -> empty .)
    UP              reduce using rule 12 (declara_vars -> empty .)
    GO              reduce using rule 12 (declara_vars -> empty .)
    LEFT            reduce using rule 12 (declara_vars -> empty .)
    RIGHT           reduce using rule 12 (declara_vars -> empty .)
    BACK            reduce using rule 12 (declara_vars -> empty .)
    WHILE           reduce using rule 12 (declara_vars -> empty .)
    RCURBRA         reduce using rule 12 (declara_vars -> empty .)
    RETURN          reduce using rule 12 (declara_vars -> empty .)


state 8

    (13) vars -> type . ID dimensionada equals exp SEMICOLON
    (14) vars -> type . ID dimensionada SEMICOLON

    ID              shift and go to state 19


state 9

    (67) type -> INT .

    ID              reduce using rule 67 (type -> INT .)


state 10

    (68) type -> FLOAT .

    ID              reduce using rule 68 (type -> FLOAT .)


state 11

    (69) type -> STRING .

    ID              reduce using rule 69 (type -> STRING .)


state 12

    (1) program -> PROGRAM ID SEMICOLON declara_vars program_fun . mainF
    (6) mainF -> . mainFI declara_vars mainF1 RCURBRA
    (7) mainFI -> . mainF_sign LCURBRA
    (8) mainF_sign -> . MAINF

    MAINF           shift and go to state 23

    mainF                          shift and go to state 20
    mainFI                         shift and go to state 21
    mainF_sign                     shift and go to state 22

state 13

    (2) program_fun -> funs .

    MAINF           reduce using rule 2 (program_fun -> funs .)


state 14

    (3) funs -> function_t . funs
    (3) funs -> . function_t funs
    (4) funs -> . function_v funs
    (5) funs -> . empty
    (53) function_t -> . FUNCTION functionI function2 inicia_fun declara_vars function4 termina_fun
    (54) function_v -> . FUNCTION functionV function2 inicia_fun declara_vars function9 termina_fun
    (164) empty -> .

    FUNCTION        shift and go to state 17
    MAINF           reduce using rule 164 (empty -> .)

    function_t                     shift and go to state 14
    funs                           shift and go to state 24
    function_v                     shift and go to state 15
    empty                          shift and go to state 16

state 15

    (4) funs -> function_v . funs
    (3) funs -> . function_t funs
    (4) funs -> . function_v funs
    (5) funs -> . empty
    (53) function_t -> . FUNCTION functionI function2 inicia_fun declara_vars function4 termina_fun
    (54) function_v -> . FUNCTION functionV function2 inicia_fun declara_vars function9 termina_fun
    (164) empty -> .

    FUNCTION        shift and go to state 17
    MAINF           reduce using rule 164 (empty -> .)

    function_v                     shift and go to state 15
    funs                           shift and go to state 25
    function_t                     shift and go to state 14
    empty                          shift and go to state 16

state 16

    (5) funs -> empty .

    MAINF           reduce using rule 5 (funs -> empty .)


state 17

    (53) function_t -> FUNCTION . functionI function2 inicia_fun declara_vars function4 termina_fun
    (54) function_v -> FUNCTION . functionV function2 inicia_fun declara_vars function9 termina_fun
    (51) functionI -> . type ID
    (52) functionV -> . VOID ID
    (67) type -> . INT
    (68) type -> . FLOAT
    (69) type -> . STRING

    VOID            shift and go to state 29
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11

    functionI                      shift and go to state 26
    functionV                      shift and go to state 27
    type                           shift and go to state 28

state 18

    (11) declara_vars -> vars declara_vars .

    FUNCTION        reduce using rule 11 (declara_vars -> vars declara_vars .)
    MAINF           reduce using rule 11 (declara_vars -> vars declara_vars .)
    IF              reduce using rule 11 (declara_vars -> vars declara_vars .)
    PRINT           reduce using rule 11 (declara_vars -> vars declara_vars .)
    READ            reduce using rule 11 (declara_vars -> vars declara_vars .)
    ID              reduce using rule 11 (declara_vars -> vars declara_vars .)
    FOR             reduce using rule 11 (declara_vars -> vars declara_vars .)
    CIRCLE          reduce using rule 11 (declara_vars -> vars declara_vars .)
    SQUARE          reduce using rule 11 (declara_vars -> vars declara_vars .)
    TRIANGLE        reduce using rule 11 (declara_vars -> vars declara_vars .)
    RECTANGLE       reduce using rule 11 (declara_vars -> vars declara_vars .)
    EXIT            reduce using rule 11 (declara_vars -> vars declara_vars .)
    START_F         reduce using rule 11 (declara_vars -> vars declara_vars .)
    END_F           reduce using rule 11 (declara_vars -> vars declara_vars .)
    POINTER_COLOR   reduce using rule 11 (declara_vars -> vars declara_vars .)
    POINTER_SIZE    reduce using rule 11 (declara_vars -> vars declara_vars .)
    SPEED           reduce using rule 11 (declara_vars -> vars declara_vars .)
    POSITION        reduce using rule 11 (declara_vars -> vars declara_vars .)
    DOWN            reduce using rule 11 (declara_vars -> vars declara_vars .)
    UP              reduce using rule 11 (declara_vars -> vars declara_vars .)
    GO              reduce using rule 11 (declara_vars -> vars declara_vars .)
    LEFT            reduce using rule 11 (declara_vars -> vars declara_vars .)
    RIGHT           reduce using rule 11 (declara_vars -> vars declara_vars .)
    BACK            reduce using rule 11 (declara_vars -> vars declara_vars .)
    WHILE           reduce using rule 11 (declara_vars -> vars declara_vars .)
    RCURBRA         reduce using rule 11 (declara_vars -> vars declara_vars .)
    RETURN          reduce using rule 11 (declara_vars -> vars declara_vars .)


state 19

    (13) vars -> type ID . dimensionada equals exp SEMICOLON
    (14) vars -> type ID . dimensionada SEMICOLON
    (15) dimensionada -> . LBRACK CTE_INT RBRACK
    (16) dimensionada -> . LBRACK CTE_INT RBRACK LBRACK CTE_INT RBRACK
    (17) dimensionada -> . empty
    (164) empty -> .

    LBRACK          shift and go to state 31
    SEMICOLON       reduce using rule 164 (empty -> .)
    EQUAL           reduce using rule 164 (empty -> .)

    dimensionada                   shift and go to state 30
    empty                          shift and go to state 32

state 20

    (1) program -> PROGRAM ID SEMICOLON declara_vars program_fun mainF .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declara_vars program_fun mainF .)


state 21

    (6) mainF -> mainFI . declara_vars mainF1 RCURBRA
    (11) declara_vars -> . vars declara_vars
    (12) declara_vars -> . empty
    (13) vars -> . type ID dimensionada equals exp SEMICOLON
    (14) vars -> . type ID dimensionada SEMICOLON
    (164) empty -> .
    (67) type -> . INT
    (68) type -> . FLOAT
    (69) type -> . STRING

    IF              reduce using rule 164 (empty -> .)
    PRINT           reduce using rule 164 (empty -> .)
    READ            reduce using rule 164 (empty -> .)
    ID              reduce using rule 164 (empty -> .)
    FOR             reduce using rule 164 (empty -> .)
    CIRCLE          reduce using rule 164 (empty -> .)
    SQUARE          reduce using rule 164 (empty -> .)
    TRIANGLE        reduce using rule 164 (empty -> .)
    RECTANGLE       reduce using rule 164 (empty -> .)
    EXIT            reduce using rule 164 (empty -> .)
    START_F         reduce using rule 164 (empty -> .)
    END_F           reduce using rule 164 (empty -> .)
    POINTER_COLOR   reduce using rule 164 (empty -> .)
    POINTER_SIZE    reduce using rule 164 (empty -> .)
    SPEED           reduce using rule 164 (empty -> .)
    POSITION        reduce using rule 164 (empty -> .)
    DOWN            reduce using rule 164 (empty -> .)
    UP              reduce using rule 164 (empty -> .)
    GO              reduce using rule 164 (empty -> .)
    LEFT            reduce using rule 164 (empty -> .)
    RIGHT           reduce using rule 164 (empty -> .)
    BACK            reduce using rule 164 (empty -> .)
    WHILE           reduce using rule 164 (empty -> .)
    RCURBRA         reduce using rule 164 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11

    declara_vars                   shift and go to state 33
    vars                           shift and go to state 6
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 22

    (7) mainFI -> mainF_sign . LCURBRA

    LCURBRA         shift and go to state 34


state 23

    (8) mainF_sign -> MAINF .

    LCURBRA         reduce using rule 8 (mainF_sign -> MAINF .)


state 24

    (3) funs -> function_t funs .

    MAINF           reduce using rule 3 (funs -> function_t funs .)


state 25

    (4) funs -> function_v funs .

    MAINF           reduce using rule 4 (funs -> function_v funs .)


state 26

    (53) function_t -> FUNCTION functionI . function2 inicia_fun declara_vars function4 termina_fun
    (57) function2 -> . LPARENT function3 RPARENT

    LPARENT         shift and go to state 36

    function2                      shift and go to state 35

state 27

    (54) function_v -> FUNCTION functionV . function2 inicia_fun declara_vars function9 termina_fun
    (57) function2 -> . LPARENT function3 RPARENT

    LPARENT         shift and go to state 36

    function2                      shift and go to state 37

state 28

    (51) functionI -> type . ID

    ID              shift and go to state 38


state 29

    (52) functionV -> VOID . ID

    ID              shift and go to state 39


state 30

    (13) vars -> type ID dimensionada . equals exp SEMICOLON
    (14) vars -> type ID dimensionada . SEMICOLON
    (75) equals -> . EQUAL

    SEMICOLON       shift and go to state 41
    EQUAL           shift and go to state 42

    equals                         shift and go to state 40

state 31

    (15) dimensionada -> LBRACK . CTE_INT RBRACK
    (16) dimensionada -> LBRACK . CTE_INT RBRACK LBRACK CTE_INT RBRACK

    CTE_INT         shift and go to state 43


state 32

    (17) dimensionada -> empty .

    SEMICOLON       reduce using rule 17 (dimensionada -> empty .)
    EQUAL           reduce using rule 17 (dimensionada -> empty .)


state 33

    (6) mainF -> mainFI declara_vars . mainF1 RCURBRA
    (9) mainF1 -> . stmt_v mainF1
    (10) mainF1 -> . empty
    (28) stmt_v -> . assignment
    (29) stmt_v -> . condition
    (30) stmt_v -> . print
    (31) stmt_v -> . loop
    (32) stmt_v -> . read
    (33) stmt_v -> . graphstmt
    (34) stmt_v -> . funCall SEMICOLON
    (164) empty -> .
    (35) assignment -> . id equals assignment3 SEMICOLON
    (101) condition -> . IF head_cond body condition1
    (70) print -> . PRINT LPARENT expression RPARENT SEMICOLON
    (18) loop -> . while
    (19) loop -> . for_v2
    (71) read -> . READ LPARENT id read1 RPARENT SEMICOLON
    (121) graphstmt -> . graphfig
    (122) graphstmt -> . graphview
    (123) graphstmt -> . graphmove
    (81) funCall -> . ID iniciaFunCall funCall2 terminaFunCall
    (80) id -> . aidi indice_dimensionada
    (116) while -> . while1 body
    (112) for_v2 -> . nuevo_for forBody
    (124) graphfig -> . graphfig1 SEMICOLON
    (125) graphfig -> . graphfig2 SEMICOLON
    (138) graphview -> . graphview0 SEMICOLON
    (139) graphview -> . graphview1 SEMICOLON
    (140) graphview -> . graphview2 SEMICOLON
    (130) graphmove -> . graphmove0 SEMICOLON
    (131) graphmove -> . graphmove1 SEMICOLON
    (79) aidi -> . ID
    (117) while1 -> . while_w LPARENT expression RPARENT
    (113) nuevo_for -> . FOR LPARENT id COLON for2 RPARENT
    (126) graphfig1 -> . CIRCLE unaExp
    (127) graphfig1 -> . SQUARE unaExp
    (128) graphfig1 -> . TRIANGLE unaExp
    (129) graphfig2 -> . RECTANGLE dosExp
    (141) graphview0 -> . EXIT
    (142) graphview0 -> . START_F
    (143) graphview0 -> . END_F
    (144) graphview1 -> . POINTER_COLOR unaExp
    (145) graphview1 -> . POINTER_SIZE unaExp
    (146) graphview1 -> . SPEED unaExp
    (147) graphview2 -> . POSITION dosExp
    (132) graphmove0 -> . DOWN
    (133) graphmove0 -> . UP
    (134) graphmove1 -> . GO unaExp
    (135) graphmove1 -> . LEFT unaExp
    (136) graphmove1 -> . RIGHT unaExp
    (137) graphmove1 -> . BACK unaExp
    (118) while_w -> . WHILE

    RCURBRA         reduce using rule 164 (empty -> .)
    IF              shift and go to state 55
    PRINT           shift and go to state 56
    READ            shift and go to state 59
    ID              shift and go to state 63
    FOR             shift and go to state 75
    CIRCLE          shift and go to state 76
    SQUARE          shift and go to state 77
    TRIANGLE        shift and go to state 78
    RECTANGLE       shift and go to state 79
    EXIT            shift and go to state 80
    START_F         shift and go to state 81
    END_F           shift and go to state 82
    POINTER_COLOR   shift and go to state 83
    POINTER_SIZE    shift and go to state 84
    SPEED           shift and go to state 85
    POSITION        shift and go to state 86
    DOWN            shift and go to state 87
    UP              shift and go to state 88
    GO              shift and go to state 89
    LEFT            shift and go to state 90
    RIGHT           shift and go to state 91
    BACK            shift and go to state 92
    WHILE           shift and go to state 93

    mainF1                         shift and go to state 44
    stmt_v                         shift and go to state 45
    empty                          shift and go to state 46
    assignment                     shift and go to state 47
    condition                      shift and go to state 48
    print                          shift and go to state 49
    loop                           shift and go to state 50
    read                           shift and go to state 51
    graphstmt                      shift and go to state 52
    funCall                        shift and go to state 53
    id                             shift and go to state 54
    while                          shift and go to state 57
    for_v2                         shift and go to state 58
    graphfig                       shift and go to state 60
    graphview                      shift and go to state 61
    graphmove                      shift and go to state 62
    aidi                           shift and go to state 64
    while1                         shift and go to state 65
    nuevo_for                      shift and go to state 66
    graphfig1                      shift and go to state 67
    graphfig2                      shift and go to state 68
    graphview0                     shift and go to state 69
    graphview1                     shift and go to state 70
    graphview2                     shift and go to state 71
    graphmove0                     shift and go to state 72
    graphmove1                     shift and go to state 73
    while_w                        shift and go to state 74

state 34

    (7) mainFI -> mainF_sign LCURBRA .

    INT             reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    FLOAT           reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    STRING          reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    IF              reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    PRINT           reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    READ            reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    ID              reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    FOR             reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    CIRCLE          reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    SQUARE          reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    TRIANGLE        reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    RECTANGLE       reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    EXIT            reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    START_F         reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    END_F           reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    POINTER_COLOR   reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    POINTER_SIZE    reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    SPEED           reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    POSITION        reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    DOWN            reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    UP              reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    GO              reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    LEFT            reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    RIGHT           reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    BACK            reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    WHILE           reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)
    RCURBRA         reduce using rule 7 (mainFI -> mainF_sign LCURBRA .)


state 35

    (53) function_t -> FUNCTION functionI function2 . inicia_fun declara_vars function4 termina_fun
    (55) inicia_fun -> . LCURBRA

    LCURBRA         shift and go to state 95

    inicia_fun                     shift and go to state 94

state 36

    (57) function2 -> LPARENT . function3 RPARENT
    (58) function3 -> . funParam function5
    (59) function3 -> . empty
    (66) funParam -> . type ID
    (164) empty -> .
    (67) type -> . INT
    (68) type -> . FLOAT
    (69) type -> . STRING

    RPARENT         reduce using rule 164 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
